Improved code readability Cards should now properly be displayed The previously selected card will no longer occasionally disappear The game will now show the correct time it took to complete the game.

--- a/Website/css/main.css
+++ b/Website/css/main.css
@@ -107,7 +107,7 @@
 
 .card__content:hover
 {
-  border: 5px solid grey;
+  border: 3px solid orange;
   border-radius: 5%;
   cursor: pointer;
 }
